keras-deeplearning/train-model/train-model.template
---
AWSTemplateFormatVersion: 2010-09-09
Description: CloudFormation template for running Machine Learing workloads on EC2 Spot Instances.
Mappings:
  DeepLearningAmi:  # 2.3_Jun2017
    ap-northeast-1:
      AMI: ami-b44050d3
    ap-northeast-2:
      AMI: ami-1523fc7b
    ap-southeast-2:
      AMI: ami-52332031
    eu-west-1:
      AMI: ami-d36386aa
    us-east-1:
      AMI: ami-4b44745d
    us-east-2:
      AMI: ami-305d7c55
    us-west-2:
      AMI: ami-296e7850
Metadata:
  Authors:
    Description: James Andersen (james.andersen@universalmind.com)
Parameters:
  InstanceType:
    AllowedValues:
    - t2.micro
    - t2.small
    - t2.medium
    - p2.xlarge
    - p2.16xlarge
    Default: p2.xlarge
    Description: EC2 instance type to use for your workload
    Type: String
  KeyPairName:
    Description: Name of an existing EC2 KeyPair used for SSH access
    Type: AWS::EC2::KeyPair::KeyName
  SourceCidr:
    Default: 0.0.0.0/0
    Description: Optional - CIDR/IP range for instance ssh access - defaults to 0.0.0.0/0
    Type: String
  SpotBidPrice:
    Default: 0.50
    Description: Spot Instance bid price
    Type: String
  GitRepo:
    Type: String
    Default: https://github.com/jamesandersen/aws-machine-learning-demo.git
    Description: URL of Git repo to clone
  GitBranch:
    Type: String
    Default: aws-keras-deeplearning
    Description: Branch of Git repo to clone
  RunScript:
    Type: String
    Default: keras-deeplearning/train_model.sh
    Description: path to bash script to start deep learning workload - relative to Git repo root
  OutputBucket:
    Type: String
    Default: um-aws-machine-learning-demo
    Description: The bucket where training output will be saved
Resources:
  DeepLearningLogsGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: DeepLearningSpotInstance
      RetentionInDays: 7
  DeepLearningVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 172.23.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
      - Key: Name
        Value: Spot Deep Learning VPC
  InternetGateway:
    DependsOn: DeepLearningVPC
    Type: AWS::EC2::InternetGateway
  AttachGateway:
    DependsOn:
    - DeepLearningVPC
    - InternetGateway
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref DeepLearningVPC
    Type: AWS::EC2::VPCGatewayAttachment
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    DependsOn: AttachGateway
    Properties:
      Tags:
      - Key: Name
        Value: Public Route Table
      VpcId: !Ref DeepLearningVPC
  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref PublicRouteTable
  PublicSubnet:
    Type: AWS::EC2::Subnet
    DependsOn: AttachGateway
    Properties:
      AvailabilityZone:
        Fn::Select:
        - 0
        - Fn::GetAZs: !Ref AWS::Region
      CidrBlock: 172.23.1.0/24
      MapPublicIpOnLaunch: true
      Tags:
      - Key: Name
        Value: Deep Learning Subnet
      VpcId: !Ref DeepLearningVPC
  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet
  DeepLearningSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Jupyter Spot Instance Security Group
      SecurityGroupIngress:
      - CidrIp: !Ref SourceCidr
        FromPort: 22
        IpProtocol: tcp
        ToPort: 22
      - CidrIp: !Ref SourceCidr
        FromPort: 8888
        IpProtocol: tcp
        ToPort: 8888
      VpcId: !Ref DeepLearningVPC
  SpotInstanceRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
        - Action:
          - sts:AssumeRole
          Effect: Allow
          Principal:
            Service:
            - ec2.amazonaws.com
        Version: 2012-10-17
      Path: /
      Policies:
      - PolicyDocument:
          Statement:
          - Action:
            - logs:CreateLogGroup
            - logs:CreateLogStream
            - logs:PutLogEvents
            - logs:DescribeLogStreams
            Effect: Allow
            Resource: !GetAtt DeepLearningLogsGroup.Arn
          Version: 2012-10-17
        PolicyName: CloudWatchLogsPolicy
      - PolicyDocument:
          Statement:
          - Action:
            - s3:ListBucket
            Effect: Allow
            Resource: !Sub "arn:aws:s3:::${OutputBucket}"
          - Action:
            - s3:PutObject
            - s3:GetObject
            Effect: Allow
            Resource: !Sub "arn:aws:s3:::${OutputBucket}/*"
          Version: 2012-10-17
        PolicyName: DeepLearningS3AccessPolicy
  SpotFleetRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
        - Action:
          - sts:AssumeRole
          Effect: Allow
          Principal:
            Service:
            - spotfleet.amazonaws.com
        Version: 2012-10-17
      ManagedPolicyArns:
      - arn:aws:iam::aws:policy/service-role/AmazonEC2SpotFleetRole
      Path: /
  SpotFleetInstanceProfile:
    Properties:
      Path: /
      Roles: [!Ref SpotInstanceRole]
    Type: AWS::IAM::InstanceProfile
  SpotFleet:
    Type: AWS::EC2::SpotFleet
    Properties:
      SpotFleetRequestConfigData:
        AllocationStrategy: lowestPrice
        IamFleetRole: !GetAtt SpotFleetRole.Arn
        SpotPrice: !Ref SpotBidPrice
        TargetCapacity: 1
        TerminateInstancesWithExpiration: true
        LaunchSpecifications:
        - IamInstanceProfile:
            Arn: !GetAtt SpotFleetInstanceProfile.Arn
          ImageId: !FindInMap [DeepLearningAmi, !Ref "AWS::Region", AMI]
          InstanceType: !Ref InstanceType
          KeyName: !Ref KeyPairName
          Monitoring:
            Enabled: true
          SecurityGroups:
          - GroupId: !Ref DeepLearningSecurityGroup
          SubnetId: !Ref PublicSubnet
          UserData:
            Fn::Base64:
              Fn::Sub: |
                #!/bin/bash -xe

                export PATH=/usr/local/bin:$PATH

                yum -y --security update
                yum -y install jq
                easy_install pip
                pip3 install awscli
                aws configure set default.region ${AWS::Region}
                echo "AWS CLI installed and configured" | tee /tmp/workload.log | logger

                pip3 install matplotlib seaborn
                echo "Seaborn installed" | tee /tmp/workload.log | logger

                # Update Keras to 2.x
                pip3 install 'keras==2.0.6' --force-reinstall
                echo "Keras updated" | tee /tmp/workload.log | logger

                cat <<EOF > /tmp/awslogs.conf

                [general]
                state_file = /var/awslogs/state/agent-state
                [/var/log/dmesg]
                file = /var/log/dmesg
                log_group_name = ${DeepLearningLogsGroup}
                log_stream_name = {instance_id}/var/log/dmesg

                [/var/log/messages]
                file = /var/log/messages
                log_group_name = ${DeepLearningLogsGroup}
                log_stream_name = {instance_id}/var/log/messages
                datetime_format = %b %d %H:%M:%S

                [/tmp/workload.log]
                file = /tmp/workload.log
                log_group_name = ${DeepLearningLogsGroup}
                log_stream_name = {instance_id}/tmp/workload.log

                EOF

                # Install CloudWatch agent

                cd /tmp && curl -sO https://s3.amazonaws.com/aws-cloudwatch/downloads/latest/awslogs-agent-setup.py

                python /tmp/awslogs-agent-setup.py -n -r ${AWS::Region} -c /tmp/awslogs.conf

                cat <<EOF > /etc/init/cloudwatch-logs-start.conf

                description "Configure and start CloudWatch Logs agent on Deep Learning instance"
                author "Amazon Web Services"

                start on started network

                script

                exec 2>>/var/log/cloudwatch-logs-start.log
                set -x
                chkconfig awslogs on
                service awslogs start

                end script

                EOF

                echo "AWS CloudWatch Log Agent installed and configured" | tee /tmp/workload.log | logger

                cat <<EOF > /home/ec2-user/workload.sh

                #!/bin/bash -xe

                # load environment as though interactive login
                source /etc/profile.d/aml_ami.sh
                printenv | tee /tmp/workload.log | logger

                git clone --depth 1 --branch ${GitBranch} ${GitRepo} /tmp/repo
                echo "Git Repo cloned" | tee /tmp/workload.log | logger

                cd /tmp/repo

                # Use /bin/bash instead of source so the script can use relative paths to its repo location
                /bin/bash /tmp/repo/${RunScript}

                # TODO: Any broadcast notifications needed here e.g. SQS, SNS, Lambda invocation
                # Would need to update the instance role accordingly of course

                EOF

                # we're now going to hand off to ec2-user, so allow access to certain files
                chown ec2-user /home/ec2-user/workload.sh
                chmod 666 /tmp/workload.log 
                chmod u+x /home/ec2-user/workload.sh

                exec su -ls /bin/sh -c 'exec "$0" "$@" 2>&1 | tee /tmp/workload.log | logger' ec2-user -- /bin/bash /home/ec2-user/workload.sh

Outputs:
  AwsRegionName:
    Description: The name of the AWS Region your template was launched in
    Value: !Ref AWS::Region
  DeepLearningLogGroup:
    Description: The Deep Learning Log Group
    Value: !Ref DeepLearningLogsGroup
  SpotFleetRequestId:
    Description: The Spot fleet Request Id
    Value: !Ref SpotFleet
